fix overflowing calendar widget on small screens
fix overflowing calendar widget on small screens by removing padding

Fixes #28

--- a/css/sass/supporting/widget.scss
+++ b/css/sass/supporting/widget.scss
@@ -42,3 +42,10 @@
         margin-bottom: 10px;
     }
 }
+
+// includes ID in selector for specificity
+.widget_calendar #wp-calendar {
+    th, td {
+        padding: 0;
+    }
+}
